--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
               <li>
                 COLOR
                 <select id="color" class="input-small">
-                <option value="#FFFFFF">#FFFFFF</option>
-                <option value="#AAAAAA">#AAAAAA</option>
-                <option value="#666666">#666666</option>
-                <option value="#000000">#000000</option>
-                <option value="#9BA16C">#9BA16C</option>
-                <option value="#CC8F2B">#CC8F2B</option>
-                <option value="#63631D">#63631D</option>
+                <option value="black">Black</option>
+                <option value="red">Red</option>
+                <option value="orange">Orange</option>
+                <option value="yellow">Yellow</option>
+                <option value="green">Green</option>
+                <option value="blue">Blue</option>
+                <option value="purple">Purple</option>
                 </select>
               </li>
             </ul>
