--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </li>
 
               <li>
-<button class="btn">Clear</button>
+<button class="btn" onclick="clearCanvas()">Clear</button>
               </li>
 
               <li style="margin-right:15px;">
@@ -95,14 +95,33 @@
             </ul>
             <ul class="nav pull-right">
               
-              <button class="btn btn-danger">Leave Room</button>
+              <button class="btn btn-danger" onclick="location.reload()">Leave Room</button>
             </ul>
           </div>
             
         </div>
     </div>
 </div>
+
+
+
+<div class="modal hide fade">
+  <div class="modal-header">
+    <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>-->
+    <h3>join classroom</h3>
+  </div>
+  <div class="modal-body">
+    <p>
+      <input type="text" id="roomID" placeholder="Room ID" class=" input input-large"/>
+    </p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn btn-primary" onclick="joinroom()">Join</a>
+  </div>
+</div>
   
+
+
   <!--The canvas where drawings will be displayed-->
   <canvas id="canvas"></canvas>
 
