Separation of Javascript

--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
 	<script src="./js/lib/jquery.min.js"></script>
 	<script src="./js/lib/bootstrap.min.js"></script>
 	<script src="./js/lib/ember.min.js"></script>
-	 <script src="./js/sample.js"></script>
+	<script src="./js/app.js"></script>
+	<script src="./js/canvas.js"></script>
+	<script src="./js/question.js"></script>
 
   </body>
 </html>
