--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 	<script src="./js/app.js"></script>
 	<script src="./js/canvas.js"></script>
 	<script src="./js/question.js"></script>
+	<script src="./js/communication.js"></script>
 
   </body>
 </html>
