--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 	<script src="./js/canvas.js"></script>
 	<script src="./js/question.js"></script>
 	<script src="./js/communication.js"></script>
+	<script src="./js/room.js"></script>
 
   </body>
 </html>
