--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
 
 
 	<!-- The canvas where drawings will be displayed -->
-	<canvas id="canvas"></canvas>
+	<canvas class="canvas hidden" id="public-canvas"></canvas>
+	<canvas class="canvas" id="private-canvas"></canvas>
 
 
 	<!-- Video Chat Region -->
