--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		</div>
 
 		<div class="modal-footer">
-			<button href="#" class="btn btn-primary" onclick="joinroom()">Join</button>
+			<button class="btn btn-primary" onclick="joinroom()">Join</button>
 		</div>
 
 	</form>
