--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		<h3>join classroom</h3>
 	</div>
 
-	<form class="form-horizontal">
+	<div class="form-horizontal">
 		<div class="modal-body">
 			<p>
 				<div class="control-group">
@@ -147,7 +147,7 @@
 			<button class="btn btn-primary" onclick="joinroom()">Join</button>
 		</div>
 
-	</form>
+	</div>
 </div>
   
 
