--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			</ul>
 			<ul class="nav pull-right">
 			  
-			  <button class="btn btn-danger" onclick="location.reload()">Leave Room</button>
+			  <button class="btn btn-danger" onclick="WBR.leaveRoom()">Leave Room</button>
 			</ul>
 		  </div>
 			
@@ -144,7 +144,7 @@
 		</div>
 
 		<div class="modal-footer">
-			<button class="btn btn-primary" onclick="joinroom()">Join</button>
+			<button class="btn btn-primary" onclick="WBR.joinRoom()">Join</button>
 		</div>
 
 	</div>
