--- a/index.html
+++ b/index.html
@@ -23,30 +23,31 @@
 
   <body>
 
+
+  	<!-- TOP BAR -->
 	<div class="navbar navbar-inverse navbar-fixed-top">
-	  <div class="navbar-inner">
-		<div class="container">
-		  <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		  </button>
-		  <a class="brand" href="#">whiteboardr</a>
-		  <div class="nav-collapse collapse">
-			<ul class="nav">
-			  <li class="question"><a style="color:white">Question 1: <b>What is the volume of the Earth?</b></a></li>
-
-			 
-
-			</ul>
-			<ul class="nav pull-right">
-			  <button class="btn btn-primary">Raise Hand</button>
-			  
-			</ul>
-		  </div><!--/.nav-collapse -->
+		<div class="navbar-inner">
+			<div class="container">
+					<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="brand" href="#">whiteboardr</a>
+					<div class="nav-collapse collapse">
+					<ul class="nav">
+						<li class="question"><a style="color:white">Question 1: <b>What is the volume of the Earth?</b></a></li>
+					</ul>
+					<ul class="nav pull-right">
+						<button class="btn btn-primary">Raise Hand</button>
+					</ul>
+				</div><!--/.nav-collapse -->
+			</div>
 		</div>
-	  </div>
 	</div>
+	<!-- END TOP BAR -->
+
+
 
 	<div class="container">
 
@@ -65,7 +66,7 @@
 			  </li>
 
 			  <li>
-<button class="btn" onclick="clearCanvas()">Clear</button>
+<button class="btn" onclick="WBR.Canvas.clear()">Clear</button>
 			  </li>
 
 			  <li style="margin-right:15px;">
@@ -181,7 +182,7 @@
 	<script src="./js/app.js"></script>
 	<script src="./js/canvas.js"></script>
 	<script src="./js/question.js"></script>
-	<script src="./js/communication.js"></script>
+	<script src="./js/user.js"></script>
 	<script src="./js/room.js"></script>
 
   </body>
