--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 					<ul class="nav pull-right">
 						
 						{{#if WBR.admin}}
-							<button onclick="WBR.launchQuestionWindow()" class="btn btn-primary">Post Question</button>
+							<button onclick="WBR.launchQuestionWindow()" class="btn btn-primary"><i class="icon-envelope icon-white"></i> Post Question</button>
 						{{else}}
-							<button class="btn btn-primary">Raise Hand</button>
+							<button class="btn btn-primary"><i class="icon-hand-up icon-white"></i> Raise Hand</button>
 						{{/if}}
 					</ul>
 				</div><!--/.nav-collapse -->
@@ -83,13 +83,13 @@
 
 					<li>
 						<div class="btn-group" data-toggle="buttons-radio">
-							<button class="btn">Draw</button>
-							<button class="btn">Erase</button>
+							<button class="btn active"><i class="icon-pencil"></i> Draw</button>
+							<button class="btn"><i class="icon-remove-sign"></i> Erase</button>
 						</div>
 					</li>
 
 					<li>
-						<button class="btn" onclick="WBR.Canvas.clear()">Clear</button>
+						<button class="btn" onclick="WBR.Canvas.clear()"><i class="icon-trash"></i> Clear</button>
 					</li>
 
 					<li style="margin-right:15px;">
@@ -122,9 +122,9 @@
 
 				<ul class="nav pull-right">
 					{{#if WBR.admin}}
-							<button class="btn btn-danger" onclick="WBR.leaveRoom()">Close Room</button>
+							<button class="btn btn-danger" onclick="WBR.leaveRoom()"><i class="icon-remove icon-white"></i> Close Room</button>
 						{{else}}
-							<button class="btn btn-danger" onclick="WBR.leaveRoom()">Leave Room</button>
+							<button class="btn btn-danger" onclick="WBR.leaveRoom()"><i class="icon-remove icon-white"></i> Leave Room</button>
 						{{/if}}
 
 					
@@ -238,7 +238,7 @@
 		{{#if WBR.admin}}
 		{{#each WBR.UserController}}
   			<div class="user-cell"><span class="user-cell-id">{{id}}</span><span class="user-cell-name">{{name}}</span>
-  			{{view Ember.Checkbox checkedBinding="isSelected"}}</div>
+  			{{view Ember.Checkbox checkedBinding="tx"}}</div>
 
 		{{/each}}
 		{{/if}}
