--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 		{{#each WBR.UserController}}
 
 			{{#if tx}}
-			<div class="user-cell enabled-user" onClick="WBR.UserController.setTx(this)">
+			<div class="user-cell" onClick="WBR.UserController.setTx(this)">
 			{{else}}
 			<div class="user-cell" onClick="WBR.UserController.setTx(this)">
 			{{/if}}
@@ -267,11 +267,11 @@
 
 			<h6>BOARDS</h6>
 
-			<div class="user-cell enabled-user" onClick="WBR.UserController.setClientCanvasPublic(this)">
+			<div class="user-cell" onClick="WBR.UserController.setClientCanvasPublic(this)">
   				<span class="user-cell-title"> Public Broadcast</span>
   			</div>
 
-  			<div class="user-cell" onClick="WBR.UserController.setClientCanvasMy(this)">
+  			<div class="user-cell enabled-user" onClick="WBR.UserController.setClientCanvasMy(this)">
   				<span class="user-cell-title"> My Board</span>
   			</div>
   			
