--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
 					<li>
 						<div class="btn-group" data-toggle="buttons-radio">
-							<button class="btn active"><i class="icon-pencil"></i> <span class="buttontext">Draw</span></button>
-							<button class="btn"><i class="icon-remove-sign"></i> <span class="buttontext">Erase</span></button>
+							<button class="btn active" onClick="WBR.setDraw()"><i class="icon-pencil"></i> <span class="buttontext">Draw</span></button>
+							<button class="btn" onClick="WBR.setErase()"><i class="icon-remove-sign"></i> <span class="buttontext">Erase</span></button>
 						</div>
 					</li>
 
@@ -121,6 +121,7 @@
 							<option value="green">Green</option>
 							<option value="blue">Blue</option>
 							<option value="purple">Purple</option>
+							<option value="white">White</option>
 						</select>
 					</li>
 
