Orbiter is a local file

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 			<h6>BOARDS</h6>
 
 			<div class="user-cell" onClick="WBR.UserController.setClientCanvasPublic(this)">
-  				<span class="user-cell-title"> Admin Board</span>
+  				<span class="user-cell-title"> Public Board</span>
   			</div>
 
   			<div class="user-cell enabled-user" onClick="WBR.UserController.setClientCanvasMy(this)">
@@ -301,7 +301,7 @@
 	
    
 	<script src="./js/lib/jquery-n.js"></script>
-   	<script type="text/javascript" src="http://cdn.unioncloud.io/OrbiterMicro_latest.js"></script>
+   	<script src="./js/lib/orbiter.js"></script>
 	<script src="./js/lib/bootstrap.min.js"></script>
   	<script src="./js/lib/ember-n.js"></script>
 	<script src="./js/app.js"></script>
