--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
 	<meta charset="utf-8">
-	<title>whiteboardr</title>
+	<title>Whiteboardr</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
 	<!-- Le styles -->
 	<link href="./css/lib/bootstrap.css" rel="stylesheet">
