canvas to image

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 	<script src="./js/question.js"></script>
 	<script src="./js/user.js"></script>
 	<script src="./js/room.js"></script>
-	
+	<script src="./js/canvas2image.js"></script>	
 	
 
   </body>
