--- a/video.html
+++ b/video.html
@@ -17,10 +17,10 @@
 
 
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script src="http://johnamoore.com:8888/socket.io/socket.io.js"></script>
-        <script src="./js/simplewebrtc.js"></script>
-        <script src="./js/video.js"></script>
+        <script src="js/simplewebrtc.js"></script>
+        <script src="js/video.js"></script>
 
     </body>
 </html>
