--- a/index.html
+++ b/index.html
@@ -245,9 +245,10 @@
 	<!-- Video Chat Region -->
 	<div id="video-chat-wrapper">
 	<div id="video-chat">
-		<img src="img/brin.jpg" id="video-chat-content"/>
+		<div id="remotes"></div>
 	</div>
 	</div>  
+	
 
 	<script type="text/x-handlebars">
 		<div id="user-list">
