--- a/index.html
+++ b/index.html
@@ -313,7 +313,10 @@
 	================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	
-   
+           
+                   <script src="http://johnamoore.com:8888/socket.io/socket.io.js"></script>
+<script src="./js/simplewebrtc.js"></script>
+        <script src="./js/video.js"></script>	
 	<script src="./js/lib/jquery-n.js"></script>
    	<script src="./js/lib/orbiter.js"></script>
 	<script src="./js/lib/bootstrap.min.js"></script>
@@ -323,7 +326,8 @@
 	<script src="./js/question.js"></script>
 	<script src="./js/user.js"></script>
 	<script src="./js/room.js"></script>
-	<script src="./js/canvas2image.js"></script>	
+	<script src="./js/canvas2image.js"></script>
+
 	
 
   </body>
