--- a/index.html
+++ b/index.html
@@ -244,9 +244,10 @@
 
 	<!-- Video Chat Region -->
 	<div id="video-chat-wrapper">
-	<div id="video-chat">
-		<div id="remotes"></div>
-	</div>
+		<div id="video-chat">
+			<div id="remotes"></div>
+			<video id="localVideo"></video>
+		</div>
 	</div>  
 	
 
