--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<span class="icon-bar"></span>
 					</button>
 
-					<a onclick="window.close()" class="windowbutton" style="margin-left:0;">
+					<a onclick="window.close()" ontouchend="window.close()" class="windowbutton" style="margin-left:0;">
 						<i class="icon-white icon-remove"></i>
 					</a>
 
@@ -61,10 +61,10 @@
 						{{#if WBR.admin}}
 							
 							<button class="btn btn-none">Administrator</button>
-							<button onclick="WBR.launchQuestionWindow()" class="btn btn-primary"><i class="icon-envelope icon-white"></i> <span class="buttontext">Post Question<span></button>
+							<button onclick="WBR.launchQuestionWindow()" ontouchend="WBR.launchQuestionWindow()" class="btn btn-primary"><i class="icon-envelope icon-white"></i> <span class="buttontext">Post Question<span></button>
 						{{else}}
 
-							<button id="raise-hand" class="btn btn-primary"  type="button" onClick="WBR.raiseHand()" data-toggle="button">
+							<button id="raise-hand" class="btn btn-primary"  type="button" onClick="WBR.raiseHand()" ontouchend="WBR.raiseHand()" data-toggle="button">
 									<i class="icon-hand-up icon-white"></i>  <!-- icon-->
 									<span id="raise-hand-text" class="buttontext">Raise Hand</span> <!-- text -->
 							</button>
@@ -95,13 +95,13 @@
 
 					<li>
 						<div class="btn-group" data-toggle="buttons-radio">
-							<button class="btn active" onClick="WBR.setDraw()"><i class="icon-pencil"></i> <span class="buttontext">Draw</span></button>
-							<button class="btn" onClick="WBR.setErase()"><i class="icon-remove-sign"></i> <span class="buttontext">Erase</span></button>
+							<button class="btn active" onClick="WBR.setDraw()" ontouchend="WBR.setDraw()" ><i class="icon-pencil"></i> <span class="buttontext">Draw</span></button>
+							<button class="btn" onClick="WBR.setErase()" ontouchend="WBR.setErase()"><i class="icon-remove-sign"></i> <span class="buttontext">Erase</span></button>
 						</div>
 					</li>
 
 					<li>
-						<button class="btn" onclick="WBR.Canvas.clear()"><i class="icon-trash"></i> <span class="buttontext">Clear</span></button>
+						<button class="btn" onclick="WBR.Canvas.clear()" ontouchend="WBR.Canvas.clear()"><i class="icon-trash"></i> <span class="buttontext">Clear</span></button>
 					</li>
 
 					<li style="margin-right:15px;">
@@ -134,13 +134,13 @@
 				</ul>
 
 				<ul class="nav pull-right">
-					<li><button class="btn" onclick="WBR.Canvas.saveCanvas()"><i class="icon-arrow-down"></i> <span class="buttontext">Save Image</span></button></li>
+					<li><button class="btn" onclick="WBR.Canvas.saveCanvas()" ontouchend="WBR.Canvas.saveCanvas()"><i class="icon-arrow-down"></i> <span class="buttontext">Save Image</span></button></li>
 
 					<li style="">
 					{{#if WBR.admin}}
-							<button class="btn btn-danger" onclick="WBR.leaveRoom()" ontouchstart="WBR.leaveRoom()"><i class="icon-remove icon-white"></i> <span class="buttontext">Close Room</span></button>
+							<button class="btn btn-danger" onclick="WBR.leaveRoom()"  ontouchend="WBR.leaveRoom()"><i class="icon-remove icon-white"></i> <span class="buttontext">Close Room</span></button>
 						{{else}}
-							<button class="btn btn-danger" onclick="WBR.leaveRoom()"><i class="icon-remove icon-white"></i> <span class="buttontext">Leave Room</span></button>
+							<button class="btn btn-danger" onclick="WBR.leaveRoom()" ontouchend="WBR.leaveRoom()"><i class="icon-remove icon-white"></i> <span class="buttontext">Leave Room</span></button>
 						{{/if}}
 					</li>
 					
@@ -195,7 +195,7 @@
 		</div>
 
 		<div class="modal-footer">
-			<button class="btn btn-primary" onclick="WBR.joinRoom()">Join</button>
+			<button class="btn btn-primary" onclick="WBR.joinRoom()"  ontouchend="WBR.joinRoom()" >Join</button>
 		</div>
 
 	</div>
