--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 				<li>
 				<button class="btn" onclick="WBR.startBroadcast()" ontouchend="WBR.startBroadcast()" id="broadcast">
-					Start Broadcast
+					<i class="icon-signal"></i> <span id="broadcaster" class="buttontext">Broadcast</span>
 					</button>
 				</li>
 
