--- a/index.html
+++ b/index.html
@@ -134,13 +134,15 @@
 				</ul>
 
 				<ul class="nav pull-right">
-
+{{#if WBR.admin}}
 				<li>
+				
 				<button class="btn" onclick="WBR.startBroadcast()" ontouchend="WBR.startBroadcast()" id="broadcast">
 					<i class="icon-signal"></i> <span id="broadcaster" class="buttontext">Broadcast</span>
 					</button>
+					
 				</li>
-
+{{/if}}
 					<li><button class="btn" onclick="WBR.Canvas.saveCanvas()" ontouchend="WBR.Canvas.saveCanvas()"><i class="icon-arrow-down"></i> <span class="buttontext" >Save Image</span></button></li>
 
 					<li style="">
