--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<li>
 				
 				<button class="btn" onclick="WBR.startBroadcast()" ontouchend="WBR.startBroadcast()" id="broadcast">
-					<i class="icon-signal"></i> <span id="broadcaster" class="buttontext">Broadcast</span>
+					<i class="icon-signal"></i> <span id="broadcaster" class="buttontext"></span>
 					</button>
 					
 				</li>
