--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	<!-- TOP BAR -->
 	<script type="text/x-handlebars">
-	<div class="navbar navbar-inverse navbar-fixed-top">
+	<div class="navbar navbar-inverse navbar-fixed-top" id="bar-top">
 		<div class="navbar-inner">
 			<div class="container">
 
@@ -85,7 +85,7 @@
 
 <!-- BOTTOM BAR -->
 <script type="text/x-handlebars">
-<div class="navbar navbar-fixed-bottom">
+<div class="navbar navbar-fixed-bottom" id="bar-bottom">
 	<div class="navbar-inner">
 		<div class="container bottom-bar">
 
