Refined "Post question" UI

--- a/index.html
+++ b/index.html
@@ -224,15 +224,7 @@
 
 	<div class="form-horizontal">
 		<div class="modal-body">
-			<p>
-				<div class="control-group">
-					<label class="control-label" for="input-room-id">Question</label>
-					<div class="controls">
-						<textarea type="text" id="input-question" onkeypress="WBR.enterQuestion()" placeholder="type your question here..." class=" input input-large"/></textarea>
-					</div>
-				</div>
-
-			</p>
+			<textarea type="text" id="input-question" onkeypress="WBR.enterQuestion()" placeholder="type your question here..." class=" input input-large" autofocus></textarea>
 		</div>
 
 		<div class="modal-footer">
