Something to do with margins and icon-text alignment. Really interesting, I know.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 {{/if}}
 					<li><button class="btn" onclick="WBR.Canvas.saveCanvas()" ontouchend="WBR.Canvas.saveCanvas()"><i class="icon-arrow-down"></i> <span class="buttontext" >Save Image</span></button></li>
 
-					<li style="">
+					<li style="margin-right:0 !important">
 					{{#if WBR.admin}}
 							<button class="btn btn-danger" onclick="WBR.leaveRoom()"  ontouchend="WBR.leaveRoom()"><i class="icon-remove icon-white"></i> <span class="buttontext">Close Room</span></button>
 						{{else}}
