Various visual enhancements

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				<div class="control-group">
 					<label class="control-label" for="input-room-id">Room Code</label>
 					<div class="controls">
-						<input type="text" id="input-room-id" onkeypress="WBR.enterJoinRoom()"  placeholder="Room Code" class=" input input-large"/>
+						<input type="text" id="input-room-id" onkeypress="WBR.enterJoinRoom()"  placeholder="Room Code" class=" input input-large" autofocus/>
 					</div>
 				</div>
 
