Modal cannot be dismissed without hitting 'join'

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 <!-- MODAL WINDOW GREETING -->
 
-<div id="login-modal" class="modal hide fade">
+<div id="login-modal" class="modal hide fade" data-backdrop="static">
 
 	<div class="modal-header">
 		<h3>join classroom</h3>
